--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -5,10 +5,15 @@
     --primary-text-color: #3388cc;
     --primary-text-color-border: rgba(51, 136, 204, 0.15);
     --primary-text-color-transparent: rgba(51, 136, 204, 0.5);
+    --primary-text-color-ultratransparent: rgba(51, 136, 204, 0.3);
     --primary-text-color-darker: #225d8c;
+
+    --accent-color: rgb(63, 61, 86);
+    --accent-color-transparent: rgba(63, 61, 86, 0.5);
 
     --secondary-color: #EEEEEE;
     --secondary-color-transparent: rgba(238, 238, 238, 0.5);
+    --secondary-color-semitransparent: rgba(238, 238, 238, 0.75);
 
     --third-color: #DDDDDD;
 
@@ -19,6 +24,7 @@
 
     /* shadows */
     --box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+    --box-shadow-inset: inset 0 5px 10px rgba(0, 0, 0, 0.15);
     --underline:
         0 -2px 0 0 currentColor inset,
         0 -3px 0 0 transparent inset;
@@ -57,7 +63,14 @@
     --nav-z-index: 2;
 }
 
+html,
 body {
+    width: 100%; height: 100%;
+}
+
+body {
+    display: grid;
+
     font-size: var(--font-size);
     font-family: var(--primary-font);
     background-color: var(--background-color);
@@ -65,8 +78,21 @@ body {
     padding-top: calc(var(--header-height) + var(--nav-height));
 
     -webkit-tap-highlight-color: var(--primary-text-color-transparent);
+}
 
-     min-height: 120vh;
+#__next,
+#__grid {
+    width: 100%;
+}
+
+#__next {
+    display: flex;
+}
+
+#__grid {
+    display: grid;
+    grid-template-rows: auto auto 1fr;
+    justify-content: stretch;
 }
 
 button {
