--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,69 +1,69 @@
 :root {
     /* colors */
-    --primary-color: #FAFAFA;
-    --primary-color-transparent: rgba(250, 250, 250, 0.5);
-    --primary-text-color: #3388cc;
-    --primary-text-color-border: rgba(51, 136, 204, 0.15);
-    --primary-text-color-transparent: rgba(51, 136, 204, 0.5);
-    --primary-text-color-ultratransparent: rgba(51, 136, 204, 0.3);
-    --primary-text-color-darker: #225d8c;
+    --ctk-primary-color: #FAFAFA;
+    --ctk-primary-color-transparent: rgba(250, 250, 250, 0.5);
+    --ctk-primary-text-color: #3388cc;
+    --ctk-primary-text-color-border: rgba(51, 136, 204, 0.15);
+    --ctk-primary-text-color-transparent: rgba(51, 136, 204, 0.5);
+    --ctk-primary-text-color-ultratransparent: rgba(51, 136, 204, 0.3);
+    --ctk-primary-text-color-darker: #225d8c;
 
-    --accent-color: rgb(63, 61, 86);
-    --accent-color-transparent: rgba(63, 61, 86, 0.5);
+    --ctk-accent-color: rgb(63, 61, 86);
+    --ctk-accent-color-transparent: rgba(63, 61, 86, 0.5);
 
-    --secondary-color: #EEEEEE;
-    --secondary-color-transparent: rgba(238, 238, 238, 0.5);
-    --secondary-color-semitransparent: rgba(238, 238, 238, 0.75);
+    --ctk-secondary-color: #EEEEEE;
+    --ctk-secondary-color-transparent: rgba(238, 238, 238, 0.5);
+    --ctk-secondary-color-semitransparent: rgba(238, 238, 238, 0.75);
 
-    --third-color: #DDDDDD;
+    --ctk-third-color: #DDDDDD;
 
-    --forth-color: #333333;
+    --ctk-forth-color: #333333;
 
-    --background-color: var(--secondary-color);
+    --ctk-background-color: var(--ctk-secondary-color);
 
     /* custom elements */
-    --banner-video-background-color: #000000;
+    --ctk-banner-video-background-color: #000000;
 
     /* shadows */
-    --box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
-    --box-shadow-inset: inset 0 5px 10px rgba(0, 0, 0, 0.15);
-    --underline:
+    --ctk-box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+    --ctk-box-shadow-inset: inset 0 5px 10px rgba(0, 0, 0, 0.15);
+    --ctk-underline:
         0 -2px 0 0 currentColor inset,
         0 -3px 0 0 transparent inset;
 
     /* fonts */
-    --font-size: 16px;
-    --primary-font: 'Source Sans Pro', sans-serif;
-    --secondary-font: 'Roboto Mono', monospace;;
+    --ctk-font-size: 16px;
+    --ctk-primary-font: 'Source Sans Pro', sans-serif;
+    --ctk-secondary-font: 'Roboto Mono', monospace;;
 
     /* gaps */
-    --general-gap: 1em;
-    --general-gap-lg: 1.50em;
-    --general-gap-md: 0.75em;
-    --general-gap-hf: 0.50em;
-    --general-gap-sm: 0.25em;
-    --gap: 30px;
-    --gap-md: 23px;
-    --gap-hf: 15px;
+    --ctk-general-gap: 1em;
+    --ctk-general-gap-lg: 1.50em;
+    --ctk-general-gap-md: 0.75em;
+    --ctk-general-gap-hf: 0.50em;
+    --ctk-general-gap-sm: 0.25em;
+    --ctk-gap: 30px;
+    --ctk-gap-md: 23px;
+    --ctk-gap-hf: 15px;
 
     /* radius */
-    --border-radius: 3px;
+    --ctk-border-radius: 3px;
 
     /* sizes */
-    --container-width: 1200px;
-    --container-min-height: 50vh;
-    --header-height: 75px;
-    --header-logo-height: 50px;
-    --nav-height: 50px;
-    --nav-fixed-height: 60px;
-    --nav-logo-height: 35px;
-    --burger-line-width: 13px;
-    --burger-line-height: 2px;
-    --burger-line-difference: 4px;
+    --ctk-container-width: 1200px;
+    --ctk-container-min-height: 50vh;
+    --ctk-header-height: 75px;
+    --ctk-header-logo-height: 50px;
+    --ctk-nav-height: 50px;
+    --ctk-nav-fixed-height: 60px;
+    --ctk-nav-logo-height: 35px;
+    --ctk-burger-line-width: 13px;
+    --ctk-burger-line-height: 2px;
+    --ctk-burger-line-difference: 4px;
 
     /* z-indexes */
-    --header-z-index: 3;
-    --nav-z-index: 2;
+    --ctk-header-z-index: 3;
+    --ctk-nav-z-index: 2;
 }
 
 html,
@@ -74,13 +74,13 @@ body {
 body {
     display: grid;
 
-    font-size: var(--font-size);
-    font-family: var(--primary-font);
-    background-color: var(--background-color);
+    font-size: var(--ctk-font-size);
+    font-family: var(--ctk-primary-font);
+    background-color: var(--ctk-background-color);
 
-    padding-top: calc(var(--header-height) + var(--nav-height));
+    padding-top: calc(var(--ctk-header-height) + var(--ctk-nav-height));
 
-    -webkit-tap-highlight-color: var(--primary-text-color-transparent);
+    -webkit-tap-highlight-color: var(--ctk-primary-text-color-transparent);
 }
 
 #__next,
@@ -95,7 +95,7 @@ body {
 #__grid {
     display: grid;
     grid-template-rows: auto 1fr auto;
-    gap: var(--general-gap-lg);
+    gap: var(--ctk-general-gap-lg);
     justify-content: stretch;
 }
 
@@ -103,16 +103,16 @@ button {
     display: flex;
     align-items: center;
     cursor: pointer;
-    font-size: var(--font-size);
-    font-family: var(--primary-font);
-    padding: var( --general-gap-sm) var( --general-gap-hf);
-    border: 1px solid var(--primary-text-color);
-    border-radius: var(--border-radius);
-    color: var(--primary-text-color);
+    font-size: var(--ctk-font-size);
+    font-family: var(--ctk-primary-font);
+    padding: var(--ctk-general-gap-sm) var(--ctk-general-gap-hf);
+    border: 1px solid var(--ctk-primary-text-color);
+    border-radius: var(--ctk-border-radius);
+    color: var(--ctk-primary-text-color);
     background-color: transparent;
 }
 
 ::selection {
-    color: var(--secondary-color);
-    background-color: var(--primary-text-color);
+    color: var(--ctk-secondary-color);
+    background-color: var(--ctk-primary-text-color);
 }
